demo/manifests/6-http-header-modifier/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-header-modifier
  namespace: httpbin
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["httpbin-header-modifier.apps.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /headers
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: gateway-api-demo # adding a new key-value pair
                value: yesss
            set:
              - name: gateway-demo-version # modifying value of existing key in header
                value: infinity
      backendRefs:
        - name: httpbin
          port: 80
